Implemented network loto