@@ -4,11 +4,14 @@
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   :dependencies [[org.clojure/clojure "1.6.0"]
-                 [org.clojure/test.check "0.7.0"]
-                 [ring/ring-core "1.3.2"]
-                 [ring/ring-jetty-adapter "1.3.2"]
+                 [compojure "1.3.1"]
+                 [ring/ring-defaults "0.1.2"]
                  [ring/ring-json "0.3.1"]
-                 [ring-server "0.4.0"]]
-  :jvm-opts ["-Xmx1g" "-XX:+UseConcMarkSweepGC"]
-  :plugins [[lein-ring "0.8.11"]]
-  :ring {:handler clojure-intro.handler/app})
+                 [clj-http "1.1.2"]]
+  :plugins [[lein-ring "0.8.13"]]
+  :ring {:handler clojure-intro.network-loto/app
+         :max-threads 200}
+  :profiles
+  {:dev {:dependencies [[javax.servlet/servlet-api "2.5"]
+                        [ring-mock "0.1.5"]]}}
+  )
